Design: aligned menu items and fixed hovering effect, made more design changes to shop page

--- a/style.css
+++ b/style.css
@@ -40,15 +40,26 @@ html {
 
 .menu a{
     height: 100%;
-    padding: 0 30px;
+    padding: 0 15px;
+    border-radius: 7px;
     text-decoration: none;
     display: flex;
     align-items: center;
 }
 
 .menu a:hover{
-    background-color: #c7c8f7;
-    color: black;
+    background-color: #e9e9ff;
+    color: rgb(9, 1, 44);
+    transition: all 0.3s ease-in-out;
+}
+
+li:hover #menuicon3{
+    color: rgb(0, 1, 43);
+    transition: all 0.3s ease-in-out;
+}
+
+.menu .bm{
+    justify-content: flex-end;
 }
 
 body{
@@ -190,22 +201,33 @@ a{
 
 #items img{
     width: 30vh;
-    margin: 3vw;
-    margin-bottom: 2vw;
-    margin-top: 1vw;
+    margin: 3vh;
+    margin-bottom: 1vh;
+    margin-top: 1vh;
 }
 
 .buttonitem{
     display: inline-flex;
     align-items: center;
     flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.6);
+    width: 35vh;
+    height: 25vh;
+    border-radius: 10px;
+    margin: 3vw;
+    box-shadow: -10px 0 10px rgba(0,0,0,0.1);
+    backdrop-filter: blur(3.3px);
+    border: 1px solid rgba(255, 255, 255,0.5)
 }
 
 .shopbutton{
-    background: #ffffff;
+    background: #caddff;
     color: rgb(0, 0, 0);
     line-height: 48px;
-    width: 15vw;
+    width: 30vh;
+    height: 5vh;
+    min-height: 40px;
+    text-align:center;
     font-size: 1em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     border-radius: 25px;
@@ -215,6 +237,5 @@ a{
     text-decoration: none;
     margin-right: 15px;
     margin-left: 15px;
-    margin-bottom: 2em;
     cursor: pointer;
 }
